# quantv1

./: .gitignore  ACTOR_ENGINE.md  PLAN.md  README.md  STYLE.md  TRADING_PLAN.md  V2_PLAN.md  V3_PLAN.md  V4_PLAN.md  V5_PLAN.md  pyproject.toml
docs/: EARNINGS_ALPHA_SPRINT.md  EARNINGS_DATA_MANIFESTS.md  data.md  fed_census_spec.md  fed_primary_manifest.md  forced_flow_announcement_spec.md  forced_flow_census_spec.md  forced_flow_continuation_spec.md  forced_flow_continuation_test_spec.md  latent_flow_shock_spec.md  opening_flow_spec.md  point_in_time_panel_spec.md  research_ledger.md  research_state_2026-07-20.md  sec_event_atlas_annotation_rubric.md  sec_event_atlas_spec.md  security_master_spec.md  strategy.md  strategy_crypto.md  strategy_intraday.md  strategy_scoreboard.md
frontend/: index.html  package-lock.json  package.json
goldset/: fed_census_rules.json  mgrm_cert_labels.skeleton.jsonl  mgrm_corpus_manifest.jsonl  mgrm_dev_labels.skeleton.jsonl  mgrm_dev_prefill.jsonl  mgrm_guidance_gold.jsonl  sec_event_atlas_coverage_audit.json  sec_event_atlas_extractor_freeze.json  sec_event_atlas_goldset_score.json  sec_event_atlas_goldset_skeleton.jsonl  sec_event_atlas_linkage_failure_decomposition.json  sec_event_atlas_phaseA_manifest.json  sec_event_atlas_phaseA_pilot.jsonl  sec_event_atlas_price_feasibility.json  sec_event_atlas_security_master_pilot.json  sec_event_atlas_unsigned_summary.json
scripts/: atlas_signed_drift_diag.py  crypto_ofi_experiment.py  crypto_tsmom_backtest.py  crypto_tsmom_paper.py  daily_update.py  daily_xs_reversal_diag.py  forward_tick.py  (+23 more)
(+139 files in other folders)
