[project]
name = "quantv1"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.4",
    "fastapi>=0.139.0",
    "lightgbm>=4.6.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "polars>=1.42.1",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "truststore>=0.10.4",
    "uvicorn[standard]>=0.51.0",
    "yfinance>=1.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantv1"]
